--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <div class="col-lg-6 col-10">
                                     <h1 class="slick-title">Improve your Grade</h1>
 
-                                    <p class="lead text-white mt-lg-3 mb-lg-5">Just skip your classes at this point. You are not smart.</p>
+                                    <p class="lead text-white mt-lg-3 mb-lg-5">More organization and productivity leads to higher grades.</p>
 
                                    
                                 </div>
@@ -146,7 +146,7 @@
                     <div class="row">
 
                         <div class="col-12 text-center">
-                            <h2 class="mb-5">Why use <span>TigerNote?</span> Because you have no life.</h2>
+                            <h2 class="mb-5">Why use <span>TigerNote?</span> Because it helps to keep all your materials organized.</h2>
                         </div>
 
                         <div class="col-lg-2 col-12 mt-auto mb-auto">
@@ -206,11 +206,11 @@
 
                                         <div class="col-lg-5 col-12">
                                             <div class="d-flex flex-column h-100 ms-lg-4 mt-lg-0 mt-5">
-                                                <h4 class="mb-3">Life as a sad college student.</h4>
+                                                <h4 class="mb-3">Life as a college student.</h4>
 
-                                                <p>Over the years the college workload has caught up to you, but your work ethic has not.</p>
+                                                <p>Over the semester, your assignments and responsibilities have accumulated.</p>
 
-                                                <p>Inject some discipline into your routine before you switch major.</p>
+                                                <p>Inject some discipline into your routine.</p>
 
                                                 <div class="mt-2 mt-lg-auto">
                                                     <a href="contact.html" class="custom-link mb-2">
@@ -233,7 +233,7 @@
                                             <div class="d-flex flex-column h-100 ms-lg-4 mt-lg-0 mt-5">
                                                 <h4 class="mb-3">Less tears.....</h4>
 
-                                                <p>At least you're not an English major....</p>
+                                                <p>Keep all your required materials in one place with <span>TigerNote</span></p>
 
                                                 <div class="skill-thumb mt-3">
 
